--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -9,13 +9,13 @@
 
         <variable
             name="viewModel"
-            type="com.example.templateapp.main.rates.vm.MainViewModel" />
+            type="com.example.templateapp.features.rates.presentation.vm.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".main.rates.ui.MainActivity">
+        tools:context=".features.rates.presentation.ui.MainActivity">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/currencyLayout"
